Start refactoring AOS to a golang app.